colcon_ws/log/build_2022-09-10_03-48-30/dasc_robot/stdout_stderr.log
[ 12%] Built target dascBots
[35m[1mScanning dependencies of target joystick_controller[0m
[ 75%] Built target example_control_geometric
[ 75%] Built target example_control_multi_rover
[ 75%] Built target example_control_geometric_acceleration
[ 75%] Built target example_control
[ 75%] Built target example_control_geometric_velocity
[ 87%] Built target dasc_robot_lib
[ 93%] [32mBuilding CXX object CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o[0m
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/robot-framework/include/dasc_robot/DASCRobots.hpp:6,
                 from /root/colcon_ws/src/robot-framework/src/joystick_control.cpp:2:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In member function ‘void JoystickController::joy_callback(sensor_msgs::msg::Joy_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:51:86: error: ‘using _stamp_type = struct builtin_interfaces::msg::Time_<std::allocator<void> >’ {aka ‘struct builtin_interfaces::msg::Time_<std::allocator<void> >’} has no member named ‘nanoseconds’; did you mean ‘nanosec’?
   51 |     RCLCPP_INFO(this->get_logger(), "new joystick msg at ts: %ld", msg->header.stamp.nanoseconds());
      |                                                                                      ^~~~~~~~~~~
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
